[package]
name = "refine"
version = "0.2.2"
edition = "2021"

authors = ["Rogério Sampaio de Almeida <rsalmei@gmail.com>"]
description = "Refine your drives deduplicating files with Rust!"
keywords = ["files", "duplicated", "deduplicate", "scan", "report"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/refine/"
repository = "https://github.com/rsalmei/refine"
readme = "README.md"
license = "MIT"

[dependencies]
human-repr = { path = "../human-repr", version = "0", features = [] }
