[package]
name = "refine"
version = "1.2.0"
edition = "2021"

authors = ["Rogério Sampaio de Almeida <rsalmei@gmail.com>"]
description = "Refine your file collection using Rust!"
keywords = ["files", "deduplicate", "rename", "batch", "scan"]
categories = ["command-line-utilities", "filesystem"]
documentation = "https://docs.rs/refine/"
repository = "https://github.com/rsalmei/refine"
readme = "README.md"
license = "MIT"

[dependencies]
human-repr = { version = "1", features = [] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
regex = "1"
ctrlc = "3"
#yansi = "1"
