[package]
name = "refine"
version = "3.0.0"
edition = "2024"

authors = ["Rogério Sampaio de Almeida <rsalmei@gmail.com>"]
description = "Refine your file collections using Rust!"
keywords = ["files", "deduplicate", "rename", "batch", "scan"]
categories = ["command-line-utilities", "filesystem"]
documentation = "https://docs.rs/refine/"
repository = "https://github.com/rsalmei/refine"
readme = "README.md"
license = "MIT"

[dependencies]
human-repr = { version = "1", features = [] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
regex = "1.11"
ctrlc = "3"
ureq = "3"
yansi = { version = "1" }
dirs = "6"
mime_guess = "2.0"
strsim = "0.11"
rayon = "1.10"
deunicode = "1.6"
